cmake_minimum_required(VERSION 3.0)

project(cpp_prime)

# using variable if not mandatory

# but more convenient to read 

# 设置C++标准为 C++ 11
set(CMAKE_CXX_STANDARD 11)


add_subdirectory(chapter1)
add_subdirectory(chapter2)
add_subdirectory(chapter3)
add_subdirectory(chapter4)
add_subdirectory(chapter5)


