add_executable(c4_1 c4_1.cpp)
add_executable(c4_2 c4_2.cpp)
add_executable(c4_3 c4_3.cpp)
add_executable(c4_4 c4_4.cpp)
add_executable(c4_5 c4_5.cpp)
add_executable(c4_6 c4_6.cpp)
add_executable(c4_7 c4_7.cpp)
add_executable(c4_8 c4_8.cpp)
add_executable(c4_9 c4_9.cpp)
add_executable(c4_10 c4_10.cpp)